k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journeysync-backend
  namespace: journeysync
spec:
  selector:
    app: journeysync-backend

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

  type: ClusterIP
