k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: journeysync
spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: journeysync-backend:latest
          imagePullPolicy: Never

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: journeysync

spec:
  selector:
    app: backend

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
