k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journeysync-frontend
  namespace: journeysync
spec:
  selector:
    app: journeysync-frontend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
